src/test/ui/consts/control-flow/short-circuit.if_match.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/short-circuit.rs:14:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to previous error

